--- a/_includes/head/analytics.html
+++ b/_includes/head/analytics.html
@@ -1,4 +1,7 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"
+></script>
 <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -6,7 +9,7 @@
         dataLayer.push(arguments);
     }
 
-    gtag('js', new Date());
+    gtag("js", new Date());
 
-    gtag('config', '{{ site.google_analytics }}');
+    gtag("config", "{{ site.google_analytics }}");
 </script>
