--- a/layouts/404.html
+++ b/layouts/404.html
@@ -31,8 +31,8 @@
 
             <p class="larger-text">Sorry, that page doesn't exist 🤷</p>
             <p class="large-text">
-                Check out the <a href="./links/">Links Page</a> to find what you're
-                looking for.
+                Check out the <a href='{{ absLangURL "links" }}'>Links Page</a> to find
+                what you're looking for.
             </p>
         </main>
     </body>
